--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:text="@string/btn_load"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup5"
+        app:layout_constraintEnd_toStartOf="@+id/radGrStorage"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,11 +28,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup5"
+        app:layout_constraintStart_toEndOf="@+id/radGrStorage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <RadioGroup
-        android:id="@+id/radioGroup5"
+        android:id="@+id/radGrStorage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
             android:text="@string/rad_preferences" />
 
         <RadioButton
-            android:id="@+id/File"
+            android:id="@+id/radFile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/rad_file" />
@@ -81,7 +81,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup5"
+        app:layout_constraintBottom_toTopOf="@+id/radGrStorage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
